# machine_learning

./: .gitignore  .gitmodules  README.md  Reference.md  dtype_ndarray_example.py  ml_code_explanation_guide.py  pandas_dtype_astype_example.py  pyproject.toml  trend.ko.md  trend.md
dacon/: 0.summary.ipynb  1.preprocessing.ipynb  10.1.2.K-means.ipynb  10.1.Outlier.ipynb  11.1.1.InbalancedData.ipynb  12.PCA.ipynb  13.LDA.ipynb  14.1.1.DatetimePandas.ipynb  14.1.2.DateTimePandas2.ipynb  14.1.2.TimedataAnalyze.ipynb  14.Datetime.ipynb  15.1.1.TimeSeries.ipynb  2.1 linear regression.md  2.1.1 PolynomialFeatures.md  2.1.feature_eng.ipynb  2.2.1.LinearRegression_coef.md  2.2.feature_importance.ipynb  2.3.1.RandomForest.md  2.3.2.feature_performance.md  2.3.feature_selection.ipynb  2.feature_eng.ipynb  3.1 LogisticRegression.ipynb  3.1.1 LogisticRegression_ChatGPTversion.md  3.1.2 LogisticRegression.ipynb  3.1.3 Probability.md  3.2.3 LogisticRegression_all_math.md  3.2.4.Model_Summary.ipynb  3.2.5.Exersice.ipynb  4.1.1.LightGBM.ipynb  4.1.2.GBDT.ipynb  4.1.2.LightGBM+GradientBoosting.ipynb  5.Classification.ipynb  6.1.1.LogTransformation.ipynb  6.1.2.TrainTest.ipynb  6.1.3.RSME_MAE.ipynb  6.1.4.Exercise.ipynb  6.Regression.ipynb  7.1.2.LogisticRegression.ipynb  7.1.3.titanic.ipynb  7.1.hyper_parameter.ipynb  (+12 more)
dacon/01.deeplearning/: 01.deeplearning.ipynb  02.ReLU.ipynb  03.Softmax.ipynb  04.Backpropagation.ipynb  06.LossFunction.ipynb  07.Gradient.ipynb  08.GradientDescent.ipynb  09.Optimizer.ipynb  10.Momentum.ipynb  11.DropOut.ipynb  12.Summary.ipynb  13.LinearRegression1.ipynb  14.LinearRegression2.ipynb  15.LinearRegression3.ipynb  16.MultiLinearRegressionModel.ipynb  17.MLPRegressionModel.ipynb
dacon/02.pytorch/: 01.basic.ipynb  02.tensor.ipynb  03.tensor.ipynb  05.derivative.ipynb  06.DataProcessing.ipynb  07.torchNN.ipynb  08.DeepLearningModel.ipynb  09.DeepLearningModel2.ipynb  10.UserDefineModel.ipynb  11.LossFunction.ipynb  12.Optimizer.ipynb  13.DeeplearningModel3.ipynb  14.UsingHardware(CPU.GPU).ipynb  15.Configuration.ipynb  4.tensor.ipynb  Reference.md  wrapper.py
dacon/03.Image/: 01.CNN.ipynb  02.CNN.ipynb  03.CNN.ipynb  04.CNN(NonLinear).ipynb  05.CNN.ipynb  06.Pooling.ipynb  07.PoolingLayer.ipynb  08.FeatureMap.ipynb  09.CNN_Classification.ipynb  10.FullyConnected.ipynb  11.Final.ipynb
dacon/04.torchvision/: 01.torchvision.ipynb  02.torchvision2.ipynb  04.torchvision4.ipynb  05.Exercise.ipynb
dacon/05.ImageClassification/: 01.ClassificationBasic.ipynb  02-02.AdaptiveAvgPooll2d.md  02-03.SPP.md  02-04.Fast_R_CNN.md  02-05.YOLO.md  02-06.FCOS_DETR.md  02-07.ViT.md  02-09.ConvNeXt.md  (+12 more)
kaggle-guide/: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
researcher/: CODE.md  TimesFM.md  main.py  pyproject.toml  timesfm_analysis_ko.ipynb
(+300 files in other folders)
