[project]
name = "kaggle-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2",
    "jupyter>=1.0",
    "jupyterlab>=4.0",
    "kaggle>=1.5",
    "lightgbm>=4.0",
    "matplotlib>=3.7",
    "nbformat>=5.9",
    "notebook>=7.0",
    "numpy>=1.24",
    "optuna>=3.3",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "seaborn>=0.12",
    "torch>=2.0",
    "torchvision>=0.15",
    "xgboost>=2.0",
]
